--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A projekt in cooperation with vierdimensional.com and SAP.",
   "dependencies": {
+    "browserify": "^16.5.0",
     "dep-linker": "^1.0.24",
     "webworkify": "^1.5.0"
   },
