--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ DirectoryIndex login
 Options -Indexes
 
 #TODO Increment the value every time before you commit/push stuff
-Header add X-Build-Version "1.2"
+Header set X-Build-Version "1.3"
