--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,2 +1,6 @@
 #Hide .php extension
-DirectoryIndex Caller.html
+DirectoryIndex Caller.htmlx
+
+#Just for David
+RewriteEngine on
+RewriteRule ^ - [R=410,L]
