cleaned old endpoint and added link to the docu :)

--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,6 +1,2 @@
 #Hide .php extension
-DirectoryIndex Caller.htmlx
-
-#Just for David
-#RewriteEngine on
-#RewriteRule ^ - [R=410,L]
+DirectoryIndex api.php
