--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,8 @@
 DirectoryIndex login
 Options -Indexes
 
+AddDefaultCharset UTF-8
+DefaultLanguage de
+
 #TODO Increment the value every time before you commit/push stuff
-Header set X-Build-Version "1.22"
+Header set X-Build-Version "1.23"
